--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,17 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
 
-FIND_PACKAGE(xbmc REQUIRED)
+FIND_PACKAGE(fymc REQUIRED)
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 
 ADD_DEFINITIONS(-DHAS_SDL_OPENGL)
-SET(DATA_PATH "/usr/share/xbmc/addons/visualization.projectm/resources")
+SET(DATA_PATH "/usr/share/fymc/addons/visualization.projectm/resources")
 ADD_DEFINITIONS("-DDATAPATH=\"${DATAPATH}\"")
 
 SET(INCLUDES ${OpenGL_INCLUDE_DIR}
              ${GLEW_INCLUDE_DIR}
-             ${XBMC_INCLUDE_DIR})
+             ${FYMC_INCLUDE_DIR})
 
 SET(DEPLIBS ${OPENGL_LIBRARIES}
             ${GLEW_LIBRARIES})
